--- a/schlattahotelet/html/Omoss.html
+++ b/schlattahotelet/html/Omoss.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>SchlättHotelet</title>
+        <title>SchlättHotellet</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,6 +31,32 @@
             <div class="hero">
                 <h1>Skaraborgs bästa hotellservice!</h1>
                 <h2>Vi ser till att du får den bästa upplevelsen här på SchlättaHotellet</h2>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="../img/hotel-1749602_640.jpg" alt="Hotell rum">
+                    <div class="intro">
+                        <h1>Våra rum</h1>
+                        <p>Våra hotell <span>rum</span> är något som vi är mycket stolta över. Rumen har modern inredning
+                              och är utrustade med allt du kommer att behöva.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../img/receptionists-gf4626975f_640.jpg" alt="Personal">
+                    <div class="intro">
+                        <h1>Personal</h1>
+                        <p>Våra <span>assistenter</span> är något som vi är mycket stolta över. De ser till att du 
+                              som bor här på SchlättaHotellet får allt du behöver!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../img/restaurant-1284351_640.jpg" alt="Kockar">
+                    <div class="intro">
+                        <h1>Kockar</h1>
+                        <p>Våra <span>kockar</span> är något som vi är mycket stolta över. Deras förmåga i köcket är
+                              guldvärd du kommer definitivt inte att bli missnöjd.</p>
+                    </div>
+                </div>
             </div>
         </header>
         <MAin>
